# lpf

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Dockerfile.cni  Jenkinsfile  LICENSE  Makefile  README.md  SECURITY.md  actual.diff  actual.nft  codecov.yml  dune  dune-project  expected.nft  five-distro-e2e.groovy  junit-lpf-functional.xml  junit-lpf-policy.xml  lpf.opam
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.txt
.github/workflows/: ci.yml  docker-publish.yml  ebpf-e2e.yml  integration.yml  pages.yml  release.yml
.semaphore/: semaphore.yml
ansible/playbooks/: deploy-policy.yml  install.yml  verify.yml
bpf/: build.sh  e2e_progrun.py  e2e_runner.py  lpf_engine.c  lpf_kern.c
ci/: five-distro-e2e.groovy
ci/cni/: cni-sandbox.sh  k3s-e2e.sh  kind-config.yaml  kind-e2e.sh
ci/github/: repo-hygiene.sh
ci/jenkins/: README.md  advanced-multikernel-matrix-job.xml  auto-release.groovy  auto-release.sh  auto-release.xml  cni-sandbox-suite.sh  firecracker-matrix-job.xml  l7-bpf-suite.sh  svc-lb-suite.sh  verify-suite.sh
ci/kernels/: kernel-matrix.tsv
ci/pages/: render-check.mjs
ci/semaphore/: functional-suite.sh  qemu-smoke.sh  setup-ocaml.sh
ci/vagabond/: ansible-suite.sh  ebpf-conntrack-suite.sh  ebpf-e2e-suite.sh  ebpf-suite.sh  feature-suite.sh
configs/policies/: advanced-database-isolation.lpf  advanced-dual-wan-qos.lpf  advanced-reverse-proxy-dmz.lpf  advanced-segmented-egress.lpf  advanced-wireguard-hub.lpf  bastion-host.lpf  branch-router-qos.lpf  database-segment.lpf  dns-resolver.lpf  nat-gateway.lpf  reverse-proxy.lpf  web-server.lpf  workstation-egress.lpf
docker/: README.md  ci.Dockerfile  ebpf.Dockerfile  rootfs-init.sh  rootfs.Dockerfile  runtime.Dockerfile
docs/: COMMANDS.md  KERNEL_LAB_MATRIX.md  MANPAGES.md  PLAN.md  UI.md  cni-spec.md  index.html
fixtures/nftables/: anchor-log.nft  logging.nft  nat-rdr.nft  queue-route.nft  reject.nft
fixtures/nftables-diff/: changed-rule.diff  extra-rule.diff  missing-owned.diff  unchanged.diff
fixtures/nftables-observed/: changed-rule.nft  extra-rule.nft  missing-owned.nft
fixtures/policies/: anchor-log.lpf  basic.lpf  e2e.lpf  ebpf-full.lpf  exhaustive.lpf  invalid-anchor-duplicate.lpf  invalid-anchor-name.lpf  invalid-anchor-statement.lpf  invalid-anchor-unclosed.lpf  invalid-anchor-unknown-reference.lpf  invalid-interface-device.lpf  invalid-log-duplicate.lpf  invalid-log-option.lpf  invalid-log-syntax.lpf  invalid-nat-extra-token.lpf  invalid-queue-duplicate-fields.lpf  invalid-queue-name.lpf  invalid-queue-references.lpf  invalid-quoted-string.lpf  invalid-rdr-port.lpf  invalid-route-to-syntax.lpf  invalid-syntax.lpf  invalid-table-trailing-comma.lpf  invalid-unknown-table.lpf  logging.lpf  messy-full.lpf  messy.lpf  nat-rdr.lpf  queue-route.lpf  reject.lpf  warning-shadowed-rule.lpf
fixtures/tests/: basic.lpf.test  exhaustive.lpf.test
homebrew/: lpf.rb
lib/: apply_guard.ml  apply_guard.mli  cni.ml  cni.mli  command.ml  command.mli  conntrack.ml  conntrack.mli  dune  e2e.ml  e2e.mli  ebpf.ml  ebpf.mli  explain.ml  explain.mli  file_util.ml  history.ml  history.mli  import_nft.ml  import_nft.mli  ip.ml  ip.mli  ir.ml  ir.mli  ir_json.ml  ir_json.mli  json_parse.ml  json_parse.mli  json_util.ml  json_util.mli  lpf.ml  lpf.mli  lpf_conf.ml  lpf_conf.mli  lpf_daemon.ml  lpf_daemon.mli  manpage.ml  manpage.mli  network_policy_translate.ml  network_policy_translate.mli  (+32 more)
lib/z3/: dune  z3_verify.ml  z3_verify.mli
packaging/deb/: changelog  control  lpf.install  rules
packaging/k8s/: lpf-cni.yaml  lpf-crds.yaml
test/: dune  test_apply_guard_unit.ml  test_cni_unit.ml  test_command_unit.ml  test_conntrack_unit.ml  test_e2e_unit.ml  test_ebpf_conformance.ml  test_ebpf_unit.ml  test_explain_unit.ml  test_file_util_unit.ml  test_history_unit.ml  test_integration_unit.ml  test_ir.ml  test_ir_unit.ml  test_json_util_unit.ml  test_lpf.ml  test_lpf_daemon_unit.ml  test_network_policy_translate.ml  test_nft_unit.ml  test_nftables.ml  test_nftables_unit.ml  test_nomad_policy_translate.ml  test_pipeline_unit.ml  test_plan.ml  test_policy.ml  test_policy_examples_unit.ml  test_policy_unit.ml  test_process_unit.ml  test_roundtrip_unit.ml  test_routing_unit.ml  test_runner_unit.ml  test_table_unit.ml  test_tc_unit.ml  test_test_engine_unit.ml
(+14 files in other folders)
