(library
 (name lpf)
 (instrumentation
  (backend bisect_ppx))
 (modules
  z3_verify
  policy_types
  json_util
  policy_fmt
  policy
  ir
  plan
  tc
  routing
  nftables
  nft
  ebpf
  explain
  ir_json
  test_engine
  test_parser
  history
  command
  manpage
  pipeline
  apply_guard
  conntrack
  table
  ip
  sysctl
  lpf
  process
  file_util
  lpf_conf)
 (libraries unix z3))
