(library
 (name lpf)
 (instrumentation
  (backend bisect_ppx))
 (modules
  policy_types
  json_util
  json_parse
  policy_fmt
  policy
  ir
  plan
  tc
  routing
  nftables
  nft
  ebpf
  explain
  ir_json
  test_engine
  test_parser
  history
  command
  manpage
  pipeline
  apply_guard
  conntrack
  table
  ip
  sysctl
  cni
  lpf_daemon
  network_policy_translate
  nomad_policy_translate
  lpf
  process
  file_util
  lpf_conf)
 (libraries unix str))
